2023-12-14T01:00:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7203050724 # 2168
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-14
* notice: last 14d: unq all: 27 36
* notice: prev accum: outdated-unq outdated-all / unq all: 1427 3366 / 1458 3403
* notice: next accum: outdated-unq outdated-all / unq all: 1429 3368 / 1458 3404
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-11-30] / [2023-12-13]

2023-12-13T16:16:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7198029720 # 2167
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-13
* notice: last 14d: unq all: 28 37
* notice: prev accum: outdated-unq outdated-all / unq all: 1426 3364 / 1458 3403
* notice: next accum: outdated-unq outdated-all / unq all: 1427 3366 / 1458 3403
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-29] / []

2023-12-13T08:17:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7192467804 # 2166
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-13
* notice: last 14d: unq all: 28 38
* notice: prev accum: outdated-unq outdated-all / unq all: 1426 3364 / 1457 3402
* notice: next accum: outdated-unq outdated-all / unq all: 1426 3364 / 1458 3403
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-12-13]

2023-12-13T01:01:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7189269218 # 2165