@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-12-14T01:00:15Z",
+  "timestamp" : "2023-12-14T08:17:05Z",
   "count_outdated" : 3368,
   "uniques_outdated" : 1429,
-  "count" : 3404,
-  "uniques" : 1458,
+  "count" : 3405,
+  "uniques" : 1459,
   "clones" : [
     {
       "timestamp": "2023-12-04T00:00:00Z",
@@ -82,6 +82,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-12-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
