@@ -1,5 +1,5 @@
 {
-  "count": 36,
+  "count": 37,
   "uniques": 27,
   "clones": [
     {
@@ -45,6 +45,11 @@
     {
       "timestamp": "2023-12-13T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-12-14T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
